--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "trailingComma": "es5"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -39,6 +40,7 @@
     "postcss": "^8.4.1",
     "prettier": "^2.5.0",
     "tailwindcss": "^2.2.19",
+    "twilio": "^3.71.2",
     "typescript": "4.5.2"
   }
 }
